# FawnMemory

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
Source/: FawnMemory.ixx
Source/Allocators/: AffixAllocator.ixx  AllocatorWithStats.ixx  Buckitizer.ixx  Common.ixx  DeerAllocator.ixx  FallbackAllocator.ixx  Freelist.ixx  Mallocator.ixx  Segregator.ixx  StackAllocator.ixx  Utilities.ixx
Source/Container/: ContainerCompatibleRange.hpp  DeerContainer.ixx  Map.ixx  Pair.ixx  Set.ixx  ValueTraits.ixx  Vector.ixx
Source/EntityComponent/: DeerEntity.ixx  ECManager.ixx  System.ixx
cmake/: compiler_flags.cmake  setup_catch.cmake
source/: FawnMemory.ixx
source/Container/: CompressedPair.ixx  DenseMap.ixx  DenseSet.ixx  FixedString.ixx  ValueTraits.hpp
source/allocators/: AllocatorWithStats.ixx  Common.ixx  DeerAllocator.ixx  Freelist.ixx  Segregator.ixx  StackAllocator.ixx  Utilities.ixx
source/container/: CircularBuffer.ixx  ContainerCompatibleRange.hpp  DeerContainer.ixx  SparseSet.ixx  Vector.ixx
source/entity_component/: ECManager.ixx  Storage.ixx
tests/: CMakeLists.txt  Map.cpp  Pair.cpp  Set.cpp  Vector.cpp
tests/container/: CompressedPair.cpp  DenseMap.cpp  DenseSet.cpp  Pair.cpp  SparseSet.cpp  Vector.cpp
